# expert-parakeet

./: .gitignore  architecture.md  pipeline.mermaid  pyproject.toml  sandbox.ipynb  silver.ipynb
docs/: overview.md
